--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>activemq-all</artifactId>
             <version>5.13.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mina</groupId>
+            <artifactId>mina-core</artifactId>
+            <version>2.0.13</version>
+        </dependency>
     </dependencies>
 
     <build>
